Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-1931

Servers using the FBM may crash after a Flush

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 1.2.0
    • 1.4.0
    • fs
    • None

    Description

      The file block manager interacts with RandomAccessFiles via the file cache, and the file cache RandomAccessFile descriptor's implementation of memory_footprint() can lead to a crash, due to its use of std::make_shared() to allocate the underlying memory.

      Just how likely the crash is to occur is unclear: it happens with near certainty using glibc's malloc, but I haven't seen it happen with tcmalloc. Because of that, I'm inclined to restrict the fix to 1.4 rather than get it into 1.3 (or even 1.2.1).

      Attachments

        Issue Links

          Activity

            People

              adar Adar Dembo
              adar Adar Dembo
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: